rancher-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: rancher
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`web.spcn26.local`)
    kind: Rule
    services:
    - name: hello-world
      port: 80
